apps/70-tools/changedetection/overlays/prod/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: V-small
      annotations:
        dataangel.io/bucket: "vixens-prod-changedetection"
        dataangel.io/fs-paths: "/datastore"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "changedetection"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
