apps/70-tools/changedetection/overlays/prod/resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
spec:
  template:
    spec:
      containers:
        - name: browserless
          resources:
            limits:
              cpu: 500m
              memory: 221Mi
            requests:
              cpu: 11m
              memory: 120Mi
        - name: changedetection
          resources:
            limits:
              cpu: 500m
              memory: 163Mi
            requests:
              cpu: 11m
              memory: 89Mi
