apps/70-tools/changedetection/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  labels:
    vixens.io/tier: "diamond"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ChangeDetection
    gethomepage.dev/icon: changedetection.png
    gethomepage.dev/group: Tools
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: changedetection.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 5000
  tls:
    - hosts:
        - changedetection.truxonline.com
      secretName: changedetection-tls
